# IRCPhone

./: .gitignore  Makefile  Makefile.am  README.md  build.sh  configure.ac  irc_bot  manual.txt  packages.sh
conf/: linphonerc
db/: README.md
src/: Makefile.am  addr_book.cpp  addr_book.h  irc_bot.cpp  irc_bot.h  irc_bot_call.cpp  irc_bot_call.h  irc_bot_core.cpp  irc_bot_core.h  irc_bot_main.cpp  irc_bot_message.cpp  irc_bot_message.h  irc_bot_proxy.cpp  irc_bot_proxy.h  my_string.cpp  my_string.h
test/: README.md  call_B.xml  hold_res.xml  mess.xml  test.py
